# enigma2-plugins

./: .travis.yml  Makefile.am  README.md  build.sh  chmod.sh  configure.ac  genmetaindex.py  updateallpo-multiOS.sh  xml2po.py
.github/workflows/: enigma2plugins.yml  ovbot.yml
3dsettings/CONTROL/: control
3dsettings/po/: 3DSettings.pot  de.po  fr.po  it.po  lt.po  tr.po
3dsettings/src/: __init__.py  plugin.py
CI/: build.sh  futurize.sh  pyskin.sh  skin.sh
PESpeedUp/po/: Makefile.am  PESpeedUp.pot  ru.po  uk.po
PESpeedUp/src/: Makefile.am  __init__.py  plugin.py
Series2Folder/CONTROL/: control
Series2Folder/po/: Series2Folder.pot
Series2Folder/src/: FileScreens.py  Makefile.am  __init__.py  plugin.py
advancedmovieselection/CONTROL/: control
advancedmovieselection/po/: AdvancedMovieSelection.pot  Makefile.am  de.po  it.po  lt.po  nl.po
advancedmovieselection/src/: About.py  AdvancedKeyboard.py  AdvancedMovieSelectionEventView.py  AdvancedMovieSelectionSetup.py  ClientSetup.py  DownloadMovies.py  FileBrowser.py  MessageBoxEx.py  MoveCopy.py  MovieList.py  MoviePlayer.py  MoviePreview.py  MovieSearch.py  MovieSelection.py  QuickButton.py  RecordPaths.py  Rename.py  SearchTMDb.py  SearchTVDb.py  Seekbar.py  SelectionListScreen.py  TagEditor.py  Version.py  Wastebasket.py  __init__.py  eRecordPaths.py  plugin.py
advhdmi/CONTROL/: control
advhdmi/po/: AdvHdmi.pot  de.po  fr.po  it.po  lt.po  nl.po
advhdmi/src/: AdvHdmiCecIF.py  AdvHdmiCecSetup.py  __init__.py  plugin.py
aihdcontroler/CONTROL/: control
aihdcontroler/src/: plugin.py
antiscrollbar/CONTROL/: control
antiscrollbar/src/: plugin.py
ardmediathek/CONTROL/: control
ardmediathek/src/: Makefile.am  ard.py  plugin.py  skin_FHD.xml  skin_HD.xml
aspectratioswitch/CONTROL/: control
aspectratioswitch/po/: AspectRatioSwitch.pot  de.po  fr.po  it.po  lt.po  ru.po
aspectratioswitch/src/: __init__.py  plugin.py
audiorestart/CONTROL/: control
audiorestart/meta/: Makefile.am
audiorestart/po/: AudioRestart.pot  Makefile.am  fr.po  lt.po
audiorestart/src/: __init__.py  plugin.py
audiosync/CONTROL/: control
audiosync/meta/: Makefile.am
audiosync/po/: AudioSync.pot  Makefile.am  ar.po  et.po  fr.po  lt.po
audiosync/src/: AC3delay.py  AC3main.py  AC3setup.py  AC3utils.py  HelpableNumberActionMap.py  MovableScreen.py  __init__.py  plugin.py
automaticcleanup/CONTROL/: control
automaticcleanup/po/: AutomaticCleanup.pot  fa.po  fr.po  it.po  lt.po  nl.po
automaticcleanup/src/: __init__.py  plugin.py
automatictimerlistcleanup/CONTROL/: control
automatictimerlistcleanup/po/: AutomaticTimerlistCleanup.pot  de.po  fa.po  fr.po  it.po  lt.po  tr.po
automatictimerlistcleanup/src/: __init__.py  plugin.py
automaticvolumeadjustment/CONTROL/: control
automaticvolumeadjustment/po/: AutomaticVolumeAdjustment.pot  ar.po  de.po  en.po  fi.po  fr.po  hu.po  lt.po  nl.po  tr.po
automaticvolumeadjustment/src/: AutomaticVolumeAdjustment.py  AutomaticVolumeAdjustmentConfig.py  AutomaticVolumeAdjustmentSetup.py  __init__.py  plugin.py
autoresolution/CONTROL/: control
autoresolution/po/: AutoResolution.pot  ar.po  cs.po  de.po  el.po  en.po  et.po  fa.po  fr.po  it.po  lt.po  nl.po  ru.po  tr.po  uk.po
autoresolution/src/: __init__.py  plugin.py
autotimer/CONTROL/: control
autotimer/po/: AutoTimer.pot  Makefile.am  ar.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  hu.po  it.po  lt.po  nl.po  pl.po  pt.po  ru.po  sr.po  tr.po  uk.po  zh_CN.po
autotimer/src/: AutoPoller.py  AutoTimer.py  AutoTimerComponent.py  AutoTimerConfiguration.py  AutoTimerEditor.py  AutoTimerImporter.py  AutoTimerList.py  AutoTimerOverview.py  AutoTimerPreview.py  AutoTimerResource.py  AutoTimerSettings.py  AutoTimerWizard.py  Makefile.am  __init__.py  plugin.py  setup.xml
autotimerpli/CONTROL/: control
autotimerpli/meta/: Makefile.am
autotimerpli/po/: AutoTimer.pot  Makefile.am  es.po
bmediacenter/po/: de.po  (+3 more)
(+1499 files in other folders)
